jena-shex/src/test/files/spec/negativeSyntax/predicate-BLANK_NODE_LABEL.shex
# BLANK_NODE_LABEL predicate
# source: turtle-syntax-bad-struct-07.ttl
<http://a.example/IssueShape> {
   _:p1 .
}
